--- a/VRChat/62/1273562.html
+++ b/VRChat/62/1273562.html
@@ -4,7 +4,7 @@
     <link href="/manifest.json" rel="manifest">
     <meta charset="utf-8">
     <title>
-      メイドリボン２１色｜#VRoid - #YUINOESTORE - BOOTH
+      メイドリボン２１色｜#VRoid - YUINOE STORE - BOOTH
     </title>
     <meta name="description" content=
     "メイドワンピースの首に巻かれたリボンの色違いです。 以下ではホワイトが使用されています。 メイドワンピース｜VRoid用 https://yui-noe.booth.pm/items/1273314 メイド服は白黒が基本ですので、胸元にワンポイントカラーを入れることで顔周辺に視線が行きやすくなります。 皆様のキャラクターのイメージカラーに沿えるようにという思いから制作しました。 勿論メイドワンピース以外のお洋服と合わせてご使用いただいても構いません。 お着替えした姿を投稿するときは@yui_noe宛にリプライやタグ付けをしてくださると嬉しいです。 Twitter:">
@@ -14,14 +14,14 @@
     <meta name="twitter:site" content="booth_pm">
     <meta name="twitter:card" content="summary_large_image">
     <meta name="twitter:title" content=
-    "メイドリボン２１色｜#VRoid - #YUINOESTORE - BOOTH">
+    "メイドリボン２１色｜#VRoid - YUINOE STORE - BOOTH">
     <meta name="twitter:description" content=
     "メイドワンピースの首に巻かれたリボンの色違いです。 以下ではホワイトが使用されています。 メイドワンピース｜VRoid用 https://yui-noe.booth.pm/items/1273314 メイド服は白黒が基本ですので、胸元にワンポイントカラーを入れることで顔周辺に視線が行きやすくなります。 皆様のキャラクターのイメージカラーに沿えるようにという思いから制作しました。 勿論メイドワンピース以外のお洋服と合わせてご使用いただいても構いません。 お着替えした姿を投稿するときは@yui_noe宛にリプライやタグ付けをしてくださると嬉しいです。 Twitter:">
     <meta name="twitter:image" content=
     "https://booth.pximg.net/c/620x620/58c3a4b7-3cf8-4d35-b645-655d8f4315aa/i/1273562/8385a9f2-d3fe-430e-aae9-cfef62872794_base_resized.jpg">
     <meta property="og:type" content="product">
     <meta property="og:title" content=
-    "メイドリボン２１色｜#VRoid - #YUINOESTORE - BOOTH">
+    "メイドリボン２１色｜#VRoid - YUINOE STORE - BOOTH">
     <meta property="og:description" content=
     "メイドワンピースの首に巻かれたリボンの色違いです。 以下ではホワイトが使用されています。 メイドワンピース｜VRoid用 https://yui-noe.booth.pm/items/1273314 メイド服は白黒が基本ですので、胸元にワンポイントカラーを入れることで顔周辺に視線が行きやすくなります。 皆様のキャラクターのイメージカラーに沿えるようにという思いから制作しました。 勿論メイドワンピース以外のお洋服と合わせてご使用いただいても構いません。 お着替えした姿を投稿するときは@yui_noe宛にリプライやタグ付けをしてくださると嬉しいです。 Twitter:">
     <meta property="og:image" content=
@@ -79,9 +79,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/34d02bac3ae4f808674f.js" defer=
+    "https://asset.booth.pm/assets/d0b74dab23351869d989.js" defer=
     "defer" nonce=
-    "rIXqOgDjGaGHnauwfnlegKaa5JRlUqNcv6UHA1/6Tk0="></script>
+    "BHKqjNTtNrxfxdysNjH6I7P/tx0JA5UJmXi2FxnkXcQ="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"メイドリボン２１色｜#VRoid","description":"メイドワンピースの首に巻かれたリボンの色違いです。\n以下ではホワイトが使用されています。\nメイドワンピース｜VRoid用\nhttps://yui-noe.booth.pm/items/1273314\n\nメイド服は白黒が基本ですので、胸元にワンポイントカラーを入れることで顔周辺に視線が行きやすくなります。\n皆様のキャラクターのイメージカラーに沿えるようにという思いから制作しました。\n\n勿論メイドワンピース以外のお洋服と合わせてご使用いただいても構いません。\n\nお着替えした姿を投稿するときは@yui_noe宛にリプライやタグ付けをしてくださると嬉しいです。\nTwitter: https://twitter.com/yui_noe","url":"https://booth.pm/ja/items/1273562","offers":{"priceCurrency":"JPY","@type":"AggregateOffer","lowPrice":"500","highPrice":"900"},"image":"https://booth.pximg.net/c/620x620/58c3a4b7-3cf8-4d35-b645-655d8f4315aa/i/1273562/8385a9f2-d3fe-430e-aae9-cfef62872794_base_resized.jpg"}
     </script>
@@ -95,7 +95,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="rIXqOgDjGaGHnauwfnlegKaa5JRlUqNcv6UHA1/6Tk0="></script>
+    nonce="BHKqjNTtNrxfxdysNjH6I7P/tx0JA5UJmXi2FxnkXcQ="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -145,9 +145,10 @@
                             data-tracking="click" target="_blank"
                             rel="noopener" href=
                             "https://yui-noe.booth.pm/"><img alt=
-                            "#YUINOESTORE" class=
+                            "YUINOE STORE" class=
                             "h-[24px] rounded-oval w-[24px]" src=
-                            "https://booth.pximg.net/c/48x48/users/5080392/icon_image/6bfb8f2d-3823-4fb5-9ba7-c328510bb076_base_resized.jpg">#YUINOESTORE</a>
+                            "https://booth.pximg.net/c/48x48/users/5080392/icon_image/6bfb8f2d-3823-4fb5-9ba7-c328510bb076_base_resized.jpg">YUINOE
+                            STORE</a>
                             <h2 class=
                             "font-bold leading-[32px] m-0 text-[24px]">
                               メイドリボン２１色｜#VRoid
@@ -797,7 +798,7 @@
       </div>
     </div>
     <div data-event-options=
-    "[{&quot;label&quot;:&quot;JUNE BRIDE FES 2023&quot;,&quot;value&quot;:&quot;junebridefes2023&quot;},{&quot;label&quot;:&quot;COMIC CITY ONLINE-230623-&quot;,&quot;value&quot;:&quot;comiccity-online-0623&quot;},{&quot;label&quot;:&quot;SC2023 Summer&quot;,&quot;value&quot;:&quot;sc2023summer&quot;},{&quot;label&quot;:&quot;ホロケット7th&quot;,&quot;value&quot;:&quot;holoketto7&quot;},{&quot;label&quot;:&quot;ドールショウ69夏&quot;,&quot;value&quot;:&quot;dollshow69&quot;},{&quot;label&quot;:&quot;第八回技術書同人誌博覧会&quot;,&quot;value&quot;:&quot;gishohaku8&quot;},{&quot;label&quot;:&quot;#エアブー230528&quot;,&quot;value&quot;:&quot;air-boo-0528&quot;},{&quot;label&quot;:&quot;COMIC CITY 大阪124&quot;,&quot;value&quot;:&quot;comiccity-osaka124&quot;},{&quot;label&quot;:&quot;関西コミティア67&quot;,&quot;value&quot;:&quot;k-comitia67&quot;},{&quot;label&quot;:&quot;デザインフェスタ vol.57&quot;,&quot;value&quot;:&quot;designfesta57&quot;}]"
+    "[{&quot;label&quot;:&quot;I・Doll VOL.68&quot;,&quot;value&quot;:&quot;i-doll68&quot;},{&quot;label&quot;:&quot;JUNE BRIDE FES 2023&quot;,&quot;value&quot;:&quot;junebridefes2023&quot;},{&quot;label&quot;:&quot;COMIC CITY ONLINE-230623-&quot;,&quot;value&quot;:&quot;comiccity-online-0623&quot;},{&quot;label&quot;:&quot;SC2023 Summer&quot;,&quot;value&quot;:&quot;sc2023summer&quot;},{&quot;label&quot;:&quot;ホロケット7th&quot;,&quot;value&quot;:&quot;holoketto7&quot;},{&quot;label&quot;:&quot;ドールショウ69夏&quot;,&quot;value&quot;:&quot;dollshow69&quot;},{&quot;label&quot;:&quot;第八回技術書同人誌博覧会&quot;,&quot;value&quot;:&quot;gishohaku8&quot;},{&quot;label&quot;:&quot;#エアブー230528&quot;,&quot;value&quot;:&quot;air-boo-0528&quot;},{&quot;label&quot;:&quot;COMIC CITY 大阪124&quot;,&quot;value&quot;:&quot;comiccity-osaka124&quot;},{&quot;label&quot;:&quot;関西コミティア67&quot;,&quot;value&quot;:&quot;k-comitia67&quot;}]"
     data-ga-from="market_show" data-parent-category-options=
     "[{&quot;label&quot;:&quot;漫画&quot;,&quot;value&quot;:&quot;漫画&quot;},{&quot;label&quot;:&quot;イラスト&quot;,&quot;value&quot;:&quot;イラスト&quot;},{&quot;label&quot;:&quot;小説・その他書籍&quot;,&quot;value&quot;:&quot;小説・その他書籍&quot;},{&quot;label&quot;:&quot;グッズ&quot;,&quot;value&quot;:&quot;グッズ&quot;},{&quot;label&quot;:&quot;ファッション&quot;,&quot;value&quot;:&quot;ファッション&quot;},{&quot;label&quot;:&quot;アクセサリー&quot;,&quot;value&quot;:&quot;アクセサリー&quot;},{&quot;label&quot;:&quot;フィギュア・ぬいぐるみ・ドール&quot;,&quot;value&quot;:&quot;フィギュア・ぬいぐるみ・ドール&quot;},{&quot;label&quot;:&quot;3Dモデル&quot;,&quot;value&quot;:&quot;3Dモデル&quot;},{&quot;label&quot;:&quot;音楽&quot;,&quot;value&quot;:&quot;音楽&quot;},{&quot;label&quot;:&quot;音声作品&quot;,&quot;value&quot;:&quot;音声作品&quot;},{&quot;label&quot;:&quot;ゲーム&quot;,&quot;value&quot;:&quot;ゲーム&quot;},{&quot;label&quot;:&quot;ソフトウェア・ハードウェア&quot;,&quot;value&quot;:&quot;ソフトウェア・ハードウェア&quot;},{&quot;label&quot;:&quot;素材データ&quot;,&quot;value&quot;:&quot;素材データ&quot;},{&quot;label&quot;:&quot;映像作品&quot;,&quot;value&quot;:&quot;映像作品&quot;},{&quot;label&quot;:&quot;写真作品&quot;,&quot;value&quot;:&quot;写真作品&quot;},{&quot;label&quot;:&quot;コスプレ&quot;,&quot;value&quot;:&quot;コスプレ&quot;},{&quot;label&quot;:&quot;絵画・アート作品&quot;,&quot;value&quot;:&quot;絵画・アート作品&quot;}]"
     data-portal-url="https://booth.pm/ja" data-search-params=
